# Snake2D-Rust

./: .gitignore  Cargo.toml  README.md
backup/: snake2d.rs
docs/: ARCHITECTURE.md  EXTENSION_GUIDE.md
src/: constants.rs  lib.rs  snake2d_v2.rs
src/audio/: mod.rs  sound_manager.rs
src/fruits/: fruit_context.rs  fruit_registry.rs  fruit_registry_test.rs  fruit_trait.rs  mod.rs
src/fruits/normal/: mod.rs  normal_fruit.rs
src/fruits/power/: ghost_fruit.rs  heal_fruit.rs  mod.rs  reverse_fruit.rs  sandworm_fruit.rs  shield_fruit.rs  speed_fruit.rs
src/fruits/special/: lucky_fruit.rs  mod.rs  snake_egg.rs
src/fruits/trap/: bomb_fruit.rs  dizzy_fruit.rs  freeze_fruit.rs  mod.rs  slime_fruit.rs  slow_fruit.rs  trap_fruit.rs
src/game/: ai_manager.rs  ai_snake.rs  bomb_manager.rs  buff_manager.rs  collision.rs  damage_manager.rs  fruit_handler.rs  game_events.rs  mod.rs  sandworm_manager.rs  snake.rs  spawn.rs  spawn_manager.rs
src/render/: ai_snake_renderer.rs  effect_renderer.rs  fruit_renderer.rs  hud_renderer.rs  mod.rs  sandworm_renderer.rs  snake_renderer.rs
src/types/: bomb.rs  buff.rs  combo.rs  damage.rs  fruit.rs  game_state.rs  mod.rs  particle.rs  portal.rs
