[package]
name = "rtest"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
sysinfo = "0.30"
macroquad = { version = "0.4", features = ["audio"] }
crossterm = "0.27"
ctrlc = "3"

[dev-dependencies]
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
[[bin]]
name = "snake2d"
path = "src/snake2d_v2.rs"
